--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
       </div>
     </div>
   </div>
-
   <div class="cardBloc">
     <div class="card" data-att="goku">
       <div class="card__face card__face--front">
@@ -47,7 +46,7 @@
 
   
   <div class="cardBloc">
-    <div class="card">
+    <div class="card" data-att="gohan">
       <div class="card__face card__face--front">
         <img src="img/backgroundBall.jpg">
       </div>
@@ -56,7 +55,7 @@
       </div>
     </div>
   </div><div class="cardBloc">
-    <div class="card">
+    <div class="card" data-att="gohan">
       <div class="card__face card__face--front">
         <img src="img/backgroundBall.jpg">
       </div>
@@ -65,6 +64,67 @@
       </div>
     </div>
   </div>
+
+  <div class="cardBloc">
+    <div class="card" data-att="vegeta">
+      <div class="card__face card__face--front">
+        <img src="img/backgroundBall.jpg">
+      </div>
+      <div class="card__face--back">
+        <img src="img/gif3.gif">
+      </div>
+    </div>
+  </div><div class="cardBloc">
+    <div class="card" data-att="vegeta">
+      <div class="card__face card__face--front">
+        <img src="img/backgroundBall.jpg">
+      </div>
+      <div class="card__face--back">
+        <img src="img/gif3.gif">
+      </div>
+    </div>
+  </div>
+
+  <div class="cardBloc">
+    <div class="card" data-att="ssj3">
+      <div class="card__face card__face--front">
+        <img src="img/backgroundBall.jpg">
+      </div>
+      <div class="card__face--back">
+        <img src="img/gif4.gif">
+      </div>
+    </div>
+  </div><div class="cardBloc">
+    <div class="card" data-att="ssj3">
+      <div class="card__face card__face--front">
+        <img src="img/backgroundBall.jpg">
+      </div>
+      <div class="card__face--back">
+        <img src="img/gif4.gif">
+      </div>
+    </div>
+  </div>
+
+  <div class="cardBloc">
+    <div class="card" data-att="gogeta">
+      <div class="card__face card__face--front">
+        <img src="img/backgroundBall.jpg">
+      </div>
+      <div class="card__face--back">
+        <img src="img/gif5.gif">
+      </div>
+    </div>
+  </div><div class="cardBloc">
+    <div class="card" data-att="gogeta">
+      <div class="card__face card__face--front">
+        <img src="img/backgroundBall.jpg">
+      </div>
+      <div class="card__face--back">
+        <img src="img/gif5.gif">
+      </div>
+    </div>
+  </div>
+
 </div>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
