check ok data ok disable click ok

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
 <body>
 
-<div class="main">
+<div id="container">
 
   <div class="cardBloc">
-    <div class="card" data-att="goku">
+    <div class="card  col-xl-2 col-md-3 col-4 col-sm-4" data-att="goku">
       <div class="card__face card__face--front">
         <img src="img/backgroundBall.jpg">
       </div>
@@ -34,7 +34,7 @@
     </div>
   </div>
   <div class="cardBloc">
-    <div class="card" data-att="goku">
+    <div class="card  col-xl-2 col-md-3 col-4 col-sm-4" data-att="goku">
       <div class="card__face card__face--front">
         <img src="img/backgroundBall.jpg">
       </div>
@@ -46,7 +46,7 @@
 
   
   <div class="cardBloc">
-    <div class="card" data-att="gohan">
+    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="gohan">
       <div class="card__face card__face--front">
         <img src="img/backgroundBall.jpg">
       </div>
@@ -55,7 +55,7 @@
       </div>
     </div>
   </div><div class="cardBloc">
-    <div class="card" data-att="gohan">
+    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="gohan">
       <div class="card__face card__face--front">
         <img src="img/backgroundBall.jpg">
       </div>
@@ -66,7 +66,7 @@
   </div>
 
   <div class="cardBloc">
-    <div class="card" data-att="vegeta">
+    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="vegeta">
       <div class="card__face card__face--front">
         <img src="img/backgroundBall.jpg">
       </div>
@@ -75,7 +75,7 @@
       </div>
     </div>
   </div><div class="cardBloc">
-    <div class="card" data-att="vegeta">
+    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="vegeta">
       <div class="card__face card__face--front">
         <img src="img/backgroundBall.jpg">
       </div>
@@ -86,7 +86,7 @@
   </div>
 
   <div class="cardBloc">
-    <div class="card" data-att="ssj3">
+    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="ssj3">
       <div class="card__face card__face--front">
         <img src="img/backgroundBall.jpg">
       </div>
@@ -95,7 +95,7 @@
       </div>
     </div>
   </div><div class="cardBloc">
-    <div class="card" data-att="ssj3">
+    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="ssj3">
       <div class="card__face card__face--front">
         <img src="img/backgroundBall.jpg">
       </div>
@@ -106,7 +106,7 @@
   </div>
 
   <div class="cardBloc">
-    <div class="card" data-att="gogeta">
+    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="gogeta">
       <div class="card__face card__face--front">
         <img src="img/backgroundBall.jpg">
       </div>
@@ -115,12 +115,33 @@
       </div>
     </div>
   </div><div class="cardBloc">
-    <div class="card" data-att="gogeta">
+    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="gogeta">
       <div class="card__face card__face--front">
         <img src="img/backgroundBall.jpg">
       </div>
       <div class="card__face--back">
         <img src="img/gif5.gif">
+      </div>
+    </div>
+  </div>
+
+
+  <div class="cardBloc">
+    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="kame">
+      <div class="card__face card__face--front">
+        <img src="img/backgroundBall.jpg">
+      </div>
+      <div class="card__face--back">
+        <img src="img/gif6.gif">
+      </div>
+    </div>
+  </div><div class="cardBloc">
+    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="kame">
+      <div class="card__face card__face--front">
+        <img src="img/backgroundBall.jpg">
+      </div>
+      <div class="card__face--back">
+        <img src="img/gif6.gif">
       </div>
     </div>
   </div>
