ajout layer a retravailler

--- a/index.html
+++ b/index.html
@@ -16,137 +16,147 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
-  <meta name="theme-color" content="#fafafa">
+  <link href="http://fonts.cdnfonts.com/css/saiyan-sans" rel="stylesheet">
+
 </head>
 
 <body>
 
-<div id="container">
-
-  <div class="cardBloc">
-    <div class="card  col-xl-2 col-md-3 col-4 col-sm-4" data-att="goku">
-      <div class="card__face card__face--front">
-        <img src="img/backgroundBall.jpg">
-      </div>
-      <div class="card__face--back">
-        <img src="img/gif1.gif">
-      </div>
-    </div>
-  </div>
-  <div class="cardBloc">
-    <div class="card  col-xl-2 col-md-3 col-4 col-sm-4" data-att="goku">
-      <div class="card__face card__face--front">
-        <img src="img/backgroundBall.jpg">
-      </div>
-      <div class=" card__face--back">
-        <img src="img/gif1.gif">
-      </div>
-    </div>
+  <div class="header d-flex justify-content-center align-items-center">
+    <h1><span id="yellow">jeu des</span> <span id="red">paires</span></h1>
   </div>
 
-  
-  <div class="cardBloc">
-    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="gohan">
-      <div class="card__face card__face--front">
-        <img src="img/backgroundBall.jpg">
-      </div>
-      <div class="card__face--back">
-        <img src="img/gif2.gif">
-      </div>
-    </div>
-  </div><div class="cardBloc">
-    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="gohan">
-      <div class="card__face card__face--front">
-        <img src="img/backgroundBall.jpg">
-      </div>
-      <div class="card__face--back">
-        <img src="img/gif2.gif">
+  <div id="container">
+
+    <div class="cardBloc  col-md-3 col-4 col-sm-4">
+      <div class="card" data-att="goku">
+        <div class="card__face card__face--front">
+          <img class="balls"src="img/backgroundBall.jpg">
+        </div>
+        <div class="card__face--back">
+          <img class="balls"src="img/gif1.gif">
+        </div>
       </div>
     </div>
+    <div class="cardBloc  col-md-3 col-4 col-sm-4">
+      <div class="card " data-att="goku">
+        <div class="card__face card__face--front">
+          <img class="balls"src="img/backgroundBall.jpg">
+        </div>
+        <div class=" card__face--back">
+          <img class="balls"src="img/gif1.gif">
+        </div>
+      </div>
+    </div>
+
+
+    <div class="cardBloc  col-md-3 col-4 col-sm-4">
+      <div class="card " data-att="gohan">
+        <div class="card__face card__face--front">
+          <img class="balls"src="img/backgroundBall.jpg">
+        </div>
+        <div class="card__face--back">
+          <img class="balls"src="img/gif2.gif">
+        </div>
+      </div>
+    </div>
+    <div class="cardBloc  col-md-3 col-4 col-sm-4">
+      <div class="card " data-att="gohan">
+        <div class="card__face card__face--front">
+          <img class="balls"src="img/backgroundBall.jpg">
+        </div>
+        <div class="card__face--back">
+          <img class="balls"src="img/gif2.gif">
+        </div>
+      </div>
+    </div>
+
+    <div class="cardBloc  col-md-3 col-4 col-sm-4">
+      <div class="card " data-att="vegeta">
+        <div class="card__face card__face--front">
+          <img class="balls"src="img/backgroundBall.jpg">
+        </div>
+        <div class="card__face--back">
+          <img class="balls"src="img/gif3.gif">
+        </div>
+      </div>
+    </div>
+    <div class="cardBloc  col-md-3 col-4 col-sm-4">
+      <div class="card " data-att="vegeta">
+        <div class="card__face card__face--front">
+          <img class="balls"src="img/backgroundBall.jpg">
+        </div>
+        <div class="card__face--back">
+          <img class="balls"src="img/gif3.gif">
+        </div>
+      </div>
+    </div>
+
+    <div class="cardBloc  col-md-3 col-4 col-sm-4">
+      <div class="card " data-att="ssj3">
+        <div class="card__face card__face--front">
+          <img class="balls"src="img/backgroundBall.jpg">
+        </div>
+        <div class="card__face--back">
+          <img class="balls"src="img/gif4.gif">
+        </div>
+      </div>
+    </div>
+    <div class="cardBloc  col-md-3 col-4 col-sm-4">
+      <div class="card a" data-att="ssj3">
+        <div class="card__face card__face--front">
+          <img class="balls"src="img/backgroundBall.jpg">
+        </div>
+        <div class="card__face--back">
+          <img class="balls"src="img/gif4.gif">
+        </div>
+      </div>
+    </div>
+
+    <div class="cardBloc  col-md-3 col-4 col-sm-4">
+      <div class="card " data-att="gogeta">
+        <div class="card__face card__face--front">
+          <img class="balls"src="img/backgroundBall.jpg">
+        </div>
+        <div class="card__face--back">
+          <img class="balls"src="img/gif5.gif">
+        </div>
+      </div>
+    </div>
+    <div class="cardBloc  col-md-3 col-4 col-sm-4">
+      <div class="card " data-att="gogeta">
+        <div class="card__face card__face--front">
+          <img class="balls"src="img/backgroundBall.jpg">
+        </div>
+        <div class="card__face--back">
+          <img class="balls"src="img/gif5.gif">
+        </div>
+      </div>
+    </div>
+
+
+    <div class="cardBloc  col-md-3 col-4 col-sm-4">
+      <div class="card" data-att="kame">
+        <div class="card__face card__face--front">
+          <img class="balls"src="img/backgroundBall.jpg">
+        </div>
+        <div class="card__face--back">
+          <img class="balls"src="img/gif6.gif">
+        </div>
+      </div>
+    </div>
+    <div class="cardBloc  col-md-3 col-4 col-sm-4">
+      <div class="card" data-att="kame">
+        <div class="card__face card__face--front">
+          <img class="balls"class="balls"src="img/backgroundBall.jpg">
+        </div>
+        <div class="card__face--back">
+          <img class="balls"src="img/gif6.gif">
+        </div>
+      </div>
+    </div>
+
   </div>
-
-  <div class="cardBloc">
-    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="vegeta">
-      <div class="card__face card__face--front">
-        <img src="img/backgroundBall.jpg">
-      </div>
-      <div class="card__face--back">
-        <img src="img/gif3.gif">
-      </div>
-    </div>
-  </div><div class="cardBloc">
-    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="vegeta">
-      <div class="card__face card__face--front">
-        <img src="img/backgroundBall.jpg">
-      </div>
-      <div class="card__face--back">
-        <img src="img/gif3.gif">
-      </div>
-    </div>
-  </div>
-
-  <div class="cardBloc">
-    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="ssj3">
-      <div class="card__face card__face--front">
-        <img src="img/backgroundBall.jpg">
-      </div>
-      <div class="card__face--back">
-        <img src="img/gif4.gif">
-      </div>
-    </div>
-  </div><div class="cardBloc">
-    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="ssj3">
-      <div class="card__face card__face--front">
-        <img src="img/backgroundBall.jpg">
-      </div>
-      <div class="card__face--back">
-        <img src="img/gif4.gif">
-      </div>
-    </div>
-  </div>
-
-  <div class="cardBloc">
-    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="gogeta">
-      <div class="card__face card__face--front">
-        <img src="img/backgroundBall.jpg">
-      </div>
-      <div class="card__face--back">
-        <img src="img/gif5.gif">
-      </div>
-    </div>
-  </div><div class="cardBloc">
-    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="gogeta">
-      <div class="card__face card__face--front">
-        <img src="img/backgroundBall.jpg">
-      </div>
-      <div class="card__face--back">
-        <img src="img/gif5.gif">
-      </div>
-    </div>
-  </div>
-
-
-  <div class="cardBloc">
-    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="kame">
-      <div class="card__face card__face--front">
-        <img src="img/backgroundBall.jpg">
-      </div>
-      <div class="card__face--back">
-        <img src="img/gif6.gif">
-      </div>
-    </div>
-  </div><div class="cardBloc">
-    <div class="card col-xl-2 col-md-3 col-4 col-sm-4" data-att="kame">
-      <div class="card__face card__face--front">
-        <img src="img/backgroundBall.jpg">
-      </div>
-      <div class="card__face--back">
-        <img src="img/gif6.gif">
-      </div>
-    </div>
-  </div>
-
-</div>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -154,6 +164,7 @@
     crossorigin="anonymous"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/layer.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
