count left ok fin de jeu ok win/lose

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 <body>
 
   <div class="header d-flex justify-content-center align-items-center">
-    <h1><span id="yellow">jeu des</span> <span id="red">paires</span></h1>
+    <h1><span class="yellow">jeu des</span> <span class="red">paires</span></h1>
+    <p class="dbzStyle"><span class="yellow">Coups</span><span class="red"> restants :</span> <span class="red" id="counts"></span></p>
+    
   </div>
 
   <div id="container">
