MQ mobile 320-400px ok

--- a/index.html
+++ b/index.html
@@ -25,28 +25,27 @@
   <div class="header d-flex justify-content-center align-items-center">
     <h1><span class="yellow">jeu des</span> <span class="red">paires</span></h1>
     <p class="dbzStyle"><span class="yellow">Coups</span><span class="red"> restants :</span> <span class="red" id="counts"></span></p>
-    
-  </div>
+   </div>
 
   <div id="container">
 
     <div class="cardBloc  col-md-3 col-4 col-sm-4">
       <div class="card" data-att="goku">
         <div class="card__face card__face--front">
-          <img class="balls"src="img/backgroundBall.jpg">
+          <img class="balls"  alt="dbz gif" src="img/backgroundBall.jpg">
         </div>
         <div class="card__face--back">
-          <img class="balls"src="img/gif1.gif">
+          <img class="balls"  alt="dbz gif" src="img/gif1.gif">
         </div>
       </div>
     </div>
     <div class="cardBloc  col-md-3 col-4 col-sm-4">
       <div class="card " data-att="goku">
         <div class="card__face card__face--front">
-          <img class="balls"src="img/backgroundBall.jpg">
+          <img class="balls"  alt="dbz gif" src="img/backgroundBall.jpg">
         </div>
         <div class=" card__face--back">
-          <img class="balls"src="img/gif1.gif">
+          <img class="balls"  alt="dbz gif" src="img/gif1.gif">
         </div>
       </div>
     </div>
@@ -55,20 +54,20 @@
     <div class="cardBloc  col-md-3 col-4 col-sm-4">
       <div class="card " data-att="gohan">
         <div class="card__face card__face--front">
-          <img class="balls"src="img/backgroundBall.jpg">
+          <img class="balls"  alt="dbz gif" src="img/backgroundBall.jpg">
         </div>
         <div class="card__face--back">
-          <img class="balls"src="img/gif2.gif">
+          <img class="balls"  alt="dbz gif" src="img/gif2.gif">
         </div>
       </div>
     </div>
     <div class="cardBloc  col-md-3 col-4 col-sm-4">
       <div class="card " data-att="gohan">
         <div class="card__face card__face--front">
-          <img class="balls"src="img/backgroundBall.jpg">
+          <img class="balls"  alt="dbz gif" src="img/backgroundBall.jpg">
         </div>
         <div class="card__face--back">
-          <img class="balls"src="img/gif2.gif">
+          <img class="balls"  alt="dbz gif" src="img/gif2.gif">
         </div>
       </div>
     </div>
@@ -76,20 +75,20 @@
     <div class="cardBloc  col-md-3 col-4 col-sm-4">
       <div class="card " data-att="vegeta">
         <div class="card__face card__face--front">
-          <img class="balls"src="img/backgroundBall.jpg">
+          <img class="balls"  alt="dbz gif" src="img/backgroundBall.jpg">
         </div>
         <div class="card__face--back">
-          <img class="balls"src="img/gif3.gif">
+          <img class="balls"  alt="dbz gif" src="img/gif3.gif">
         </div>
       </div>
     </div>
     <div class="cardBloc  col-md-3 col-4 col-sm-4">
       <div class="card " data-att="vegeta">
         <div class="card__face card__face--front">
-          <img class="balls"src="img/backgroundBall.jpg">
+          <img class="balls"  alt="dbz gif" src="img/backgroundBall.jpg">
         </div>
         <div class="card__face--back">
-          <img class="balls"src="img/gif3.gif">
+          <img class="balls"  alt="dbz gif" src="img/gif3.gif">
         </div>
       </div>
     </div>
@@ -97,20 +96,20 @@
     <div class="cardBloc  col-md-3 col-4 col-sm-4">
       <div class="card " data-att="ssj3">
         <div class="card__face card__face--front">
-          <img class="balls"src="img/backgroundBall.jpg">
+          <img class="balls"  alt="dbz gif" src="img/backgroundBall.jpg">
         </div>
         <div class="card__face--back">
-          <img class="balls"src="img/gif4.gif">
+          <img class="balls"  alt="dbz gif" src="img/gif4.gif">
         </div>
       </div>
     </div>
     <div class="cardBloc  col-md-3 col-4 col-sm-4">
       <div class="card a" data-att="ssj3">
         <div class="card__face card__face--front">
-          <img class="balls"src="img/backgroundBall.jpg">
+          <img class="balls"  alt="dbz gif" src="img/backgroundBall.jpg">
         </div>
         <div class="card__face--back">
-          <img class="balls"src="img/gif4.gif">
+          <img class="balls"  alt="dbz gif" src="img/gif4.gif">
         </div>
       </div>
     </div>
@@ -118,20 +117,20 @@
     <div class="cardBloc  col-md-3 col-4 col-sm-4">
       <div class="card " data-att="gogeta">
         <div class="card__face card__face--front">
-          <img class="balls"src="img/backgroundBall.jpg">
+          <img class="balls"  alt="dbz gif" src="img/backgroundBall.jpg">
         </div>
         <div class="card__face--back">
-          <img class="balls"src="img/gif5.gif">
+          <img class="balls"  alt="dbz gif" src="img/gif5.gif">
         </div>
       </div>
     </div>
     <div class="cardBloc  col-md-3 col-4 col-sm-4">
       <div class="card " data-att="gogeta">
         <div class="card__face card__face--front">
-          <img class="balls"src="img/backgroundBall.jpg">
+          <img class="balls"  alt="dbz gif" src="img/backgroundBall.jpg">
         </div>
         <div class="card__face--back">
-          <img class="balls"src="img/gif5.gif">
+          <img class="balls"  alt="dbz gif" src="img/gif5.gif">
         </div>
       </div>
     </div>
@@ -140,20 +139,20 @@
     <div class="cardBloc  col-md-3 col-4 col-sm-4">
       <div class="card" data-att="kame">
         <div class="card__face card__face--front">
-          <img class="balls"src="img/backgroundBall.jpg">
+          <img class="balls"  alt="dbz gif" src="img/backgroundBall.jpg">
         </div>
         <div class="card__face--back">
-          <img class="balls"src="img/gif6.gif">
+          <img class="balls"  alt="dbz gif" src="img/gif6.gif">
         </div>
       </div>
     </div>
     <div class="cardBloc  col-md-3 col-4 col-sm-4">
       <div class="card" data-att="kame">
         <div class="card__face card__face--front">
-          <img class="balls"class="balls"src="img/backgroundBall.jpg">
+          <img class="balls"  alt="dbz gif" src="img/backgroundBall.jpg">
         </div>
         <div class="card__face--back">
-          <img class="balls"src="img/gif6.gif">
+          <img class="balls"  alt="dbz gif" src="img/gif6.gif">
         </div>
       </div>
     </div>
