ajout musique commentaire etc

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <p class="dbzStyle"><span class="yellow">Coups</span><span class="red"> restants :</span> <span class="red" id="counts"></span></p>
    </div>
 
+  
   <div id="container">
 
     <div class="cardBloc  col-md-3 col-4 col-sm-4">
@@ -158,6 +159,13 @@
     </div>
 
   </div>
+
+  <audio autoplay>
+    <source src="media/audio/01-cha-la head-cha-la (tv size).mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+  </audio>
+
+
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
